<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/mensagem_login"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/purple_700"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/mensagem_login_usuario"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/purple_700"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/input_user"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:ems="15"
        android:inputType="textPersonName"
        android:hint="@string/text_input_user"/>

   

    <TextView
        android:id="@+id/text_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:text="@string/mensagem_login_senha"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/purple_700"
        />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:ems="15"
        android:hint="@string/text_input_password"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/checkBoxLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Lembrar login" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="horizontal">

        <!--<ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/input_password"
            app:layout_constraintStart_toStartOf="@+id/input_password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />-->

      
     
        
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            
            <Button
                android:id="@+id/botao_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/botao_user"
                android:stateListAnimator="@null"
                 />
             
            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_centerInParent="true"/>
        

        </FrameLayout>



    </LinearLayout>

    <ImageView
        android:id="@+id/imageview_login"
        android:layout_width="match_parent"
        android:layout_height="264dp"
        android:layout_weight="1"
        tools:srcCompat="@drawable/cab" />


</LinearLayout>